# RexEngine

./: .editorconfig  .gitattributes  .gitignore  .globalconfig  Directory.Build.props  Directory.Build.targets  Docs.csproj  LICENSE.txt  README.md  Rex.sln
.github/: labeler.yml
.github/workflows/: build-test-debug.yml  build-test-release.yml  build.yml  check-crlf.yml  ci.yml  close-main-pr.yml  format-autofix.yml  (+11 more)
.run/: Rex Client.run.xml  Rex Listen Server.run.xml  Rex Sandbox Client.run.xml  Rex Sandbox Listen Server.run.xml  Rex Sandbox Server + Client.run.xml  Rex Sandbox Server.run.xml  Rex Sandbox Standalone.run.xml  Rex Server + Client.run.xml  Rex Server.run.xml  Rex Standalone.run.xml
Resources/: README.md
Rex.Analyzers/: AccessAnalyzer.cs  AnalyzerReleases.Shipped.md  ByRefEventAnalyzer.cs  DataDefinitionAnalyzer.cs  DataDefinitionFixer.cs  DependencyAssignAnalyzer.cs  DuplicateDependencyAnalyzer.cs  ExplicitInterfaceAnalyzer.cs  ExplicitVirtualAnalyzer.cs  ForbidLiteralAnalyzer.cs  ITypeSymbolExtensions.cs  MeansImplicitAssignmentSuppressor.cs  MustCallBaseAnalyzer.cs  NoUncachedRegexAnalyzer.cs  ObsoleteInheritanceAnalyzer.cs  PreferGenericVariantAnalyzer.cs  PreferNonGenericVariantForAnalyzer.cs  PreferOtherTypeAnalyzer.cs  PreferOtherTypeFixer.cs  PrototypeAnalyzer.cs  PrototypeFixer.cs  PrototypeInstantiationAnalyzer.cs  PrototypeNetSerializableAnalyzer.cs  ProxyForAnalyzer.cs  ProxyForFixer.cs  Rex.Analyzers.csproj  SerializableAnalyzer.cs  TaskResultAnalyzer.cs  ValidateMemberAnalyzer.cs
Rex.Client/: ClientApp.Logging.cs  ClientApp.cs  CommandLineArgs.cs  GameWindow.cs  Program.Logging.cs  Program.cs  Program.cs.orig  RenderItem.cs  Rex.Client.csproj  WindowCreator.cs  WindowManager.cs
Rex.Docs/: Rex.Docs.csproj
Rex.Generators/: Rex.Generators.csproj
Rex.Resources/: Rex.Resources.csproj
Rex.Roslyn.Shared/: AttributeHelper.cs  Diagnostics.cs  PartialTypeHelper.cs  Rex.Roslyn.Shared.csproj  Rex.Roslyn.Shared.props  TypeSymbolHelper.cs
Rex.Sandbox.Client/: ClientApp.cs  Program.cs  Rex.Sandbox.Client.csproj
Rex.Sandbox.Server/: Program.cs  Rex.Sandbox.Server.csproj  ServerApp.cs
Rex.Sandbox.Shared/: Rex.Sandbox.Shared.csproj
Rex.Server/: CommandLineArgs.cs  Program.cs  Rex.Server.csproj  ServerApp.Logging.cs  ServerApp.cs
Rex.Shared/: Class1.cs  EntityTypeIds.cs  MeansImplicitAssignmentAttribute.cs  Rex.Shared.csproj
Tools/: check_crlf.py
msbuild/: RexSandboxDisabledEntryPoint.cs
native/Rex.Native/: CMakeLists.txt
native/Rex.Native/include/rex/: tick.h
native/Rex.Native/include/rex/core/: export.h
native/Rex.Native/src/: tick.cpp
native/Rex.Native/tests/: simple_test.cpp
scripts/: build-native.ps1  build-native.sh  generate-bindings.ps1  generate-bindings.sh
tests/: Directory.Build.props
(+353 files in other folders)
